# whatsapp-farma

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  alembic.ini  docker-compose.yml  plex.pach  plex2.pach  pyproject.toml  pyrightconfig.json  requirements.txt
alembic/: env.py
app/: main.py
app/api/: routes.py
app/api/v1/: __init__.py  clients.py  health.py  payments.py  transactions.py
app/application/dto/: __init__.py  client_dto.py  transaction_dto.py
app/application/interfaces/: __init__.py  use_case.py
app/application/use_cases/: __init__.py  create_client.py  create_transaction.py  get_client.py  process_payment.py
app/core/: config.py
app/db/: __init__.py  base.py  session.py
app/domain/entities/: __init__.py  base.py  client.py  pharmacy.py  transaction.py
app/domain/exceptions/: __init__.py
app/domain/interfaces/repositories/: __init__.py  base.py  client_repository.py  pharmacy_repository.py  transaction_repository.py
app/domain/interfaces/services/: __init__.py  base.py  plex.py
app/domain/services/: __init__.py  client_validator.py  transaction_number_generator.py
app/domain/value_objects/: __init__.py  address.py  client_balance.py  email.py  money.py  phone.py  tax_id.py
app/infrastructure/config/: __init__.py  ai.py  application.py  database.py  payment.py  plex.py  security.py  settings.py  storage.py  whatsapp.py
app/infrastructure/database/mappers/: __init__.py  client_mapper.py
app/infrastructure/database/repositories/: __init__.py  client_repository.py
app/infrastructure/dependencies/: __init__.py  container.py  database.py  services.py  use_cases.py
app/middleware/: __init__.py  auth_middleware.py  error_handler.py
app/models/: __init__.py  access_token.py  audit_log.py  client.py  invoice.py  pharmacy.py  transaction.py  whatsapp.py
app/presentation/api/: router.py
app/presentation/api/v1/: __init__.py  clients.py
app/schemas/: __init__.py  client_schema.py  transaction_schema.py
app/services/: auth_service.py  chroma_service.py  client_service.py  clienty_service.py  langchain_service.py  mongo_service.py  payment_service.py  pdf_service.py  pharmacy_service.py  plex_service.py  transaction_service.py  webhook_service.py  whatsapp_service.py
app/utils/: phone_utils.py
scripts/: modernize_typing.py  setup-quality-tools.sh
tests/: README.md  conftest.py
tests/e2e/api/: test_clients_endpoints.py
tests/integration/repositories/: test_client_repository.py
tests/unit/application/use_cases/: test_create_client.py
tests/unit/domain/entities/: test_client.py
tests/unit/domain/services/: test_client_validator.py  test_transaction_number_generator.py
tests/unit/domain/value_objects/: test_client_balance.py  test_money.py  test_phone.py
