[tool.poetry]
name = "whatsapp-pharmacy-assistant"
version = "0.1.0"
description = "WhatsApp Pharmacy Billing and Payment Assistant"
authors = ["UPTEAM"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core Framework
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
python-dotenv = "^1.1.1"
python-multipart = "^0.0.20"
httpx = "^0.27.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dateutil = "^2.8.0"
jinja2 = "^3.1.0"

# Authentication & Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.database]
optional = false

[tool.poetry.group.database.dependencies]
# PostgreSQL
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
aiosqlite = "^0.21.0"

# MongoDB (chat history)
pymongo = "^4.8.0"
motor = "^3.3.0"

# Cache & Rate Limiting
redis = "^5.0.0"

[tool.poetry.group.integrations]
optional = false

[tool.poetry.group.integrations.dependencies]
# Payment Integration
mercadopago = "^2.2.0"

# PDF Generation
weasyprint = "^60.0"

[tool.poetry.group.ai]
optional = true

[tool.poetry.group.ai.dependencies]
# AI (Optional - for general queries)
openai = "^1.50.0"
langchain = "^0.3.27"
langchain-openai = "^0.3.0"
chromadb = "^0.5.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Code Quality
black = "^24.0.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

# Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
faker = "^30.0.0"
factory-boy = "^3.3.0"

# Development Tools
ipython = "^8.20.0"
ipdb = "^0.13.13"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
faker = "^30.0.0"
factory-boy = "^3.3.0"
httpx = "^0.27.0"

# Note: Poetry scripts must be module:function format
# Use poetry run commands directly instead

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# ========================
# Tool Configurations
# ========================

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_equality = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
